search box fixs on mobile when cookie bannerr open

--- a/src/scss/sections/_header.scss
+++ b/src/scss/sections/_header.scss
@@ -159,7 +159,8 @@
 
 .cookies-banner-show {
 	.main-header,
-	.mobile-nav {
+	.mobile-nav,
+	.search-box {
 		margin-top: calc(#{($font-size-xs + $line-height-base) * 2.5} + #{map-get($spacers,1)});
 		@include media-breakpoint-up('lg') {
 			margin-top: calc(#{($font-size-xs + $line-height-base) * 2} + #{map-get($spacers,1)});
